--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NodeArc AI | Engineered Automation</title>
+
+    <!-- Tailwind CDN -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
+
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Tailwind Config -->
     <script>
       tailwind.config = {
         theme: {
@@ -20,48 +29,62 @@
               dark: '#050505',
               surface: '#0A0A0A',
               accent: '#E5E5E5',
-            }
-          }
-        }
-      }
+            },
+          },
+        },
+      };
     </script>
+
+    <!-- Global Styles -->
     <style>
       body {
         background-color: #050505;
         font-family: 'Inter', sans-serif;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale;
+        margin: 0;
       }
-      /* Hide scrollbar for cleaner look */
+
       ::-webkit-scrollbar {
         width: 8px;
       }
+
       ::-webkit-scrollbar-track {
-        background: #0A0A0A;
+        background: #0a0a0a;
       }
+
       ::-webkit-scrollbar-thumb {
         background: #333;
         border-radius: 4px;
       }
+
       ::-webkit-scrollbar-thumb:hover {
         background: #555;
       }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "lucide-react": "https://esm.sh/lucide-react@^0.561.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "framer-motion": "https://esm.sh/framer-motion@^12.23.26",
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.48.1"
-  }
-}
-</script>
-</head>
+
+    <!-- Import Map -->
+    <script type="importmap">
+      {
+        "imports": {
+          "react": "https://esm.sh/react@19.2.3",
+          "react/": "https://esm.sh/react@19.2.3/",
+          "react-dom": "https://esm.sh/react-dom@19.2.3",
+          "react-dom/": "https://esm.sh/react-dom@19.2.3/",
+          "lucide-react": "https://esm.sh/lucide-react@0.561.0",
+          "framer-motion": "https://esm.sh/framer-motion@12.23.26",
+          "@google/genai": "https://esm.sh/@google/genai@1.34.0",
+          "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1"
+        }
+      }
+    </script>
+  </head>
+
   <body>
     <div id="root"></div>
+
+    <!-- 🚀 THIS WAS MISSING (CRITICAL) -->
+    <!-- Make sure this path matches your repo -->
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
